--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 </head>
 
 <body>
+  <div class="wrapper">
+    <div class="sidebar-wrapper">
 
+    </div>
+    <div class="main-content">
+
+    </div>
+
+  </div>
 
 
 
