--- a/index.html
+++ b/index.html
@@ -14,17 +14,31 @@
     <div class="sidebar-wrapper">
 
     </div>
-    <div class="main-content">
+    <div class="content-wrapper">
+      <div class="landing">
+        <div class="container">
+
+        </div>
+
+      </div>
+      <div class="Section youtube">
+        <div class="container">
+
+        </div>
+
+      </div>
+
+
+
+
 
     </div>
 
-  </div>
 
 
-
-  <script src="js/jquery-3.2.1.js" charset="utf-8"></script>
-  <script src="js/scripts.js">
-  </script>
+    <script src="js/jquery-3.2.1.js" charset="utf-8"></script>
+    <script src="js/scripts.js">
+    </script>
 </body>
 
 </html>
