Add initial layout for page 2 landing page and screenshots section

--- a/page2.html
+++ b/page2.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <!--wrapper whole page starts here-->
   <div class="wrapper">
     <div class="sidebar-wrapper" id="sidebar">
       <div class="sidebar-header">
@@ -35,13 +36,28 @@
         <button type="submit" name="button">Register</button>
       </div>
     </div>
-
+    <!--landing page starts here-->
     <div class="landing">
+      <div class="container">
+
+      </div>
 
     </div>
+    <!--landing page starts here-->
+
+    <!--screenshots starts here-->
+    <div class="screen-shots">
+      <div class="container">
+
+      </div>
+
+    </div>
+    <!--screenshots ends here-->
+
+
 
   </div>
-  <!--wrapper ends here-->
+  <!--wrapper whole page ends here-->
 
 
 
