--- a/page2.html
+++ b/page2.html
@@ -1,70 +1,87 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Testing</title>
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/styles.css">
-
+  <link rel="stylesheet" href="css/page2.css">
+  <script src="js/jquery-3.2.1.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 
 <body>
-  <!--wrapper whole page starts here-->
-  <div class="wrapper">
-    <div class="sidebar-wrapper" id="sidebar">
-      <div class="sidebar-header">
-        <h1><strong>KaliSoft</strong></h1>
-      </div>
-      <input type="text" name="search" placeholder="Search..">
-      <ul class="side-bar nav">
-        <li class="active">
-          <a href="#browserSubmenu" data-toggle="collapse" aria-expanded="false">Browser Game</a>
-          <ul class="collapse list-unstyled" id="browserSubmenu">
-            <li><a href="#">All Games</a></li>
-            <li><a href="#">Free Games</a></li>
-            <li><a href="#">More</a></li>
-          </ul>
-        </li>
-      </ul>
-      <div class="container sign">
 
-        <div>
+  <!--carousel begins-->
+  <div class="container">
+    <div class="carousel slide" id="mySlider" data-ride="carousel">
+
+      <ol class="carousel-indicators">
+        <li data-target="#mySlider" data-slide-to="0" class="active"></li>
+        <li data-target="#mySlider" data-slide-to="1"></li>
+        <li data-target="#mySlider" data-slide-to="2"></li>
+        <li data-target="#mySlider" data-slide-to="3"></li>
+        <li data-target="#mySlider" data-slide-to="4"></li>
+        <li data-target="#mySlider" data-slide-to="5"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <a href=""><img class="img-responsive" class="picture" src="img/assasin.jpg" ></a>
+          <div class="carousel-caption">
+            <h1><strong>Guardians of the Galaxy 2 Blu-ray Release Date Revealed...</strong></h1>
+          </div>
         </div>
-        <button type="submit" name="button">Sign In</button>
+        <div class="item">
+          <a href="#"><img  class="picture" src="img/bf4.jpg" ></a>
+          <div class="carousel-caption">
+            <h1><strong>What on earth is The Book of Henry, and is it really the worst film of the year?</strong></h1>
+          </div>
+        </div>
+        <div class="item">
+          <a href="#"><img class="picture" src="img/cod.jpg" ></a>
+          <div class="carousel-caption">
+            <h1><strong>Why the Queer Characters in Rough Night Feel So Refreshing</strong></h1>
+          </div>
+        </div>
+        <div class="item">
+          <a href="#"><img  class="picture" src="img/fifa.jpg"  ></a>
+          <div class="carousel-caption">
+            <h1><strong></strong></h1>
+
+
+          </div>
+        </div>
+        <div class="item">
+          <a href="#"><img class="picture" src="img/Games1175.jpg" ></a>
+          <div class="carousel-caption">
+            <h1><strong> ‘Cars 3’ Races Past ‘Wonder Woman’ to No. 1...</strong> </h1>
+          </div>
+        </div>
+        <div class="item">
+          <a href="#"><img   class="picture" src="img/Games1183.jpg" alt="spidermanhc"></a>
+          <div class="carousel-caption">
+            <h1><strong>Spider-Man: Homecoming in Same Universe as Venom, Silver and Black Films</strong></h1>
+          </div>
+        </div>
       </div>
-      <div>
-        <button type="submit" name="button">Register</button>
-      </div>
+      <a class="left carousel-control" href="#mySlider" data-slide="prev">
+
+    <span class="icon-prev"></span>
+    <span class="sr-only">Previous</span>
+    </a>
+      <a class="right carousel-control" href="#mySlider" data-slide="next">
+        <span class="icon-next"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+
     </div>
-    <!--landing page starts here-->
-    <div class="landing">
-      <div class="container">
-
-      </div>
-
-    </div>
-    <!--landing page starts here-->
-
-    <!--screenshots starts here-->
-    <div class="screen-shots">
-      <div class="container">
-
-      </div>
-
-    </div>
-    <!--screenshots ends here-->
 
 
 
 
   </div>
-  <!--wrapper whole page ends here-->
-
-
-
-  <script src="js/jquery-3.2.1.js" charset="utf-8"></script>
-  <script src="js/scripts.js">
-  </script>
 </body>
 
 </html>
