add youtube links and image cards to the main content and some business logic content to append the image cards

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 
             <div class="carousel-item">
               <img class="d-block img-fluid" src="img/gears.jpg" alt="Third slide">
+
               <div class="carousel-caption d-none d-md-block">
                 <h3>Gears</h3>
                 <p>Brucie is here baby</p>
@@ -139,16 +140,21 @@
       </div>
       <div class="screenshot">
         <div class="container">
-          <h3>SCREENSHOTS</h3>
+          <h3>ACTION GAMES</h3>
+          <div class="card-deck" id="carddeck">
+
+          </div>
+          <h3>TRAILERS</h3>
           <div class="card-deck">
             <div class="card">
-              <img class="card-img-top" src="img/screenshots/cods1.jpg" width="293" alt="Card image cap">
+
+              <iframe width="auto" height="auto" src="https://www.youtube.com/embed/0ETKAYRzvjs?ecver=1" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="card">
-              <img class="card-img-top" src="img/screenshots/cods2.jpg" width="293" alt="Card image cap">
+              <iframe width="auto" height="auto" src="https://www.youtube.com/embed/EL5GSfs9fi4?ecver=1" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="card">
-              <img class="card-img-top" src="img/screenshots/cods3.jpg" width="293" alt="Card image cap">
+              <iframe width="auto" height="auto" src="https://www.youtube.com/embed/K-5EdHZ0hBs?ecver=1" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
