--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
       <div class="screenshot">
         <div class="container">
-          <h3>ACTION GAMES</h3>
+          <h3><a id="finya" href="page2.html">ACTION GAMES</a></h3>
           <div class="card-deck" id="carddeck">
 
           </div>
@@ -163,12 +163,13 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 centred">
-              <h4><strong>descriptions</strong></h4>
+              <h4><strong id="asdf">descriptions</strong></h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                 aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
           </div>
         </div>
+
       </div>
     </div>
     <!--content wrapper ends-->
