--- a/page3.html
+++ b/page3.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="css/styles.css">
 
 
-
 </head>
 
 <body>
@@ -62,31 +61,9 @@
 
 
 
-    <!--content section begins-->
+    <!--content wrapper begins-->
     <div class="">
-
-      <section id="intro">
-        <h2>page 2</h2>
-        <div class="container">
-          <h4 id="gamesHeaders"></h4>
-          <div class="row">
-            <div class="col-md-4 sc">
-              <!-- <img src="img/Games3858.jpg" id="thumb" alt=""> -->
-            </div>
-            <div class="col-md-8" id="lorem">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-
-
-            </div>
-
-          </div>
-
-        </div>
-
-      </section>
-      <!--content section ends-->
+      <h2>page 3</h2>
 
     </div>
     <!--content wrapper ends-->
@@ -102,7 +79,7 @@
   <script src="js/jquery-3.2.1.js" charset="utf-8"></script>
   <script src="js/bootstrap.min.js" charset="utf-8"></script>
 
-  <script src="js/scripts2.js">
+  <script src="js/scripts.js">
   </script>
 </body>
 
