--- a/page2.html
+++ b/page2.html
@@ -86,7 +86,18 @@
         </div>
 
       </section>
-      <!--content section ends-->
+
+      <!--ssection content section ends-->
+
+      <div class="screen-shots">
+        <div class="container">
+          <div class="card-deck" id="wekaScreenShots">
+
+          </div>
+
+        </div>
+
+      </div>
 
     </div>
     <!--content wrapper ends-->
