--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </div>
       <div class="screenshot">
         <div class="container">
-          <h3><a id="finya" href="page2.html">ACTION GAMES</a></h3>
+          <h3><a id="finya" href="page3.html">ALL GAMES</a></h3>
           <div class="card-deck" id="carddeck">
 
           </div>
