--- a/page3.html
+++ b/page3.html
@@ -62,10 +62,27 @@
 
 
     <!--content wrapper begins-->
-    <div class="">
+    <div class="action">
       <h2>page 3</h2>
+      <div class="container">
+        <h4>action</h4>
+        <div class="card-deck" id="carddeck">
 
+        </div>
+
+
+      </div>
     </div>
+    <h5>asdfghbvcxdzsdxfcgvhdzfxcg</h5>
+    <div class="rpg">
+      <h4>rpg</h4>
+      <div class="container">
+        <div class="card-deck" id="carddeck2">
+
+        </div>
+      </div>
+    </div>
+
     <!--content wrapper ends-->
 
 
@@ -79,7 +96,7 @@
   <script src="js/jquery-3.2.1.js" charset="utf-8"></script>
   <script src="js/bootstrap.min.js" charset="utf-8"></script>
 
-  <script src="js/scripts.js">
+  <script src="js/scripts3.js">
   </script>
 </body>
 
