Add styling to page2 css and change font size and weight in styles.css

--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,7 @@
   <title></title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/page2.css">
 
 
 
@@ -74,8 +75,7 @@
               <!-- <img src="img/Games3858.jpg" id="thumb" alt=""> -->
             </div>
             <div class="col-md-8" id="lorem">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 
 
 
@@ -94,6 +94,109 @@
           <div class="card-deck" id="wekaScreenShots">
 
           </div>
+
+          <!-- description content START -->
+
+
+
+          <section id="overview">
+            <h4>Overview</h4>
+            <div class="row page2">
+              <div class="col-md-4">
+                <h5>Genre</h5>
+                <p>Action, Adventure, Shooter</p>
+                <h5>Release Date</h5>
+                <p>November 14, 2017</p>
+                <h5>Rating</h5>
+                <p> TBC</p>
+
+              </div>
+              <div class="col-md-8">
+                <h5>Publisher</h5>
+                <p>Electronic Arts</p>
+
+                <h5>  Developer</h5>
+                <p>DICE</p>
+                <h5>Supported languages</h5>
+                <p>English (US), 中文（繁體）</p>
+
+              </div>
+            </div>
+          </section>
+
+
+          <section id="description">
+            <h4>Description</h4>
+            <div class="row page2">
+              <div class="col-md-4">
+                <h5>Key Features:</h5>
+
+                <p>Play it early. Get up to 3 days of early access with the Deluxe Edition.</p>
+
+                <p>Upgrade your packs. All 4 upgrade packs are yours (Elite Officer, Heavy Metal, Armored Assault and Master Specialist), giving you access to exclusive epic gaming ability modifiers and modifications: </p>
+
+
+                <p>
+                  High stakes competition. Win big with all-new Risk vs Reward gameplay. Intense cop chases mean the stakes have never been higher. Challenge your friends or potential rivals via Autolog recommendations throughout the events or go head-to-head in classic
+                  online leaderboards.
+                </p>
+
+              </div>
+              <div class="col-md-8">
+                <p>
+
+                  Exclusive themed looks. Make sure your crew really stand out against the chaos of the battleground with exclusive looks.
+                </p>
+
+                <p>Epic tier Star Cards. Get instant access to epic tier Star Cards, upgrading and strengthening your characters’ abilities, and granting you additional power to change the course of the game, use your epic Star Cards to increase your radius
+                  of vision, revealing enemies’ and friends in hidden positions through out the game, then impair their movement for a greater duration using Deep Mind.Use your Solid Freeze epic Star Card to increase the time you freeze your opponents
+                  in fear, then pull them towards you over even greater distances with Power Reach.</p>
+
+                <p>Ship epic ability modifiers. Get an edge over the Resistance with an upgrade to a new First Order ship card.
+                </p>
+              </div>
+            </div>
+          </section>
+
+          <section id="system-req">
+            <h4>System Requirements</h4>
+            <div class="row page2">
+              <div class="col-md-4">
+                <h5>Minimum Requirements:</h5>
+                <p> OS: 64-bit Windows 7, Windows 8.1 and Windows 10</p>
+                <p> Processor (AMD): AMD FX-6350</p>
+                <p>Processor (Intel): Intel Core i5 6600K</p>
+                <p> Memory: 8GB RAM</p>
+                <p> Graphics card (AMD): AMD Radeon™ HD 7850 2GB</p>
+                <p> Graphics card (NVIDIA): NVIDIA GeForce® GTX 660 2GB</p>
+                <p>DirectX: 11.0 Compatible video card or equivalent</p>
+                <!-- <p> Online Connection Requirements: 512KBPS or faster Internet connection Hard-drive space: 50GB</p> -->
+
+
+              </div>
+              <div class="col-md-8">
+                <h5>Recommended Requirements:</h5>
+                <p>OS: 64-bit Windows 10 or later</p>
+                <p> Processor (AMD): AMD FX 8350 Wraith</p>
+                <p>Processor (Intel): Intel Core i7 4790 or equivalent</p>
+                <p>Memory: 16GB RAM</p>
+                <p> Graphics card (AMD): AMD Radeon™ RX 480 4GB</p>
+                <p>Graphics card (NVIDIA): NVIDIA GeForce® GTX 1060 3GB</p>
+                <p> DirectX: 11.1 Compatible video card or equivalent</p>
+                <p> Online Connection Requirements: 512KBPS or faster Internet connection Hard-drive space: 50GB
+                </p>
+              </div>
+            </div>
+          </section>
+
+
+
+
+
+
+
+
+
 
         </div>
 
