Add the screenshots header in page 2

--- a/page2.html
+++ b/page2.html
@@ -91,6 +91,7 @@
 
       <div class="screen-shots">
         <div class="container">
+          <h4>Screen Shots</h4>
           <div class="card-deck" id="wekaScreenShots">
 
           </div>
