--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
     <nav id="sidebar">
       <div class="sidebar-header">
-        <h1><strong>KaliSoft</strong></h1>
+        <h1><strong><a href="index.html">KaliSoft</a></strong></h1>
       </div>
       <form>
         <input type="text" name="search" value="" placeholder="Search Games">
