Add an intro iframe to the index page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
     <div id="content">
       <div class="container landing2">
 
+        <!--blaster starts here-->
+        <div class="blasterIntro">
+
+          <iframe width="1080" height="480" src="https://www.youtube.com/embed/kf2qDAEZc2w?autoplay=1&rel=0" frameborder="0" allowfullscreen></iframe>
+        </div>
+        <!--blaster ends here-->
+
+
         <!--carousel starts here-->
 
         <div id="kalicarousel" class="carousel slide" data-ride="carousel">
@@ -135,8 +143,8 @@
         <!--carousel ends here-->
 
 
-        <div class="fgffg">
-        </div>
+        <!-- <div class="fgffg">
+        </div> -->
       </div>
       <div class="screenshot">
         <div class="container">
@@ -144,6 +152,7 @@
           <div class="card-deck" id="carddeck">
 
           </div>
+          <!--trailers starts-->
           <h3>TRAILERS</h3>
           <div class="card-deck">
             <div class="card">
@@ -159,11 +168,14 @@
           </div>
         </div>
       </div>
-      <div class="description">
+      <!--trailers  ends-->
+
+      <!--indie section starts-->
+      <div class="indie-games">
         <div class="container">
           <div class="row">
             <div class="col-md-12 centred">
-              <h4><strong id="asdf">descriptions</strong></h4>
+              <h4><strong id="asdf">Indie Games</strong></h4>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
                 aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
@@ -171,6 +183,23 @@
         </div>
 
       </div>
+      <!--indie section ends-->
+
+      <!--top sellers section-->
+      <div class="indie-games">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 centred">
+              <h4><strong id="asdf">Top Sellers</strong></h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <!--top seller ends-->
+
     </div>
     <!--content wrapper ends-->
 
