add footer to the third page

--- a/page3.html
+++ b/page3.html
@@ -66,19 +66,22 @@
       <h2>page 3</h2>
       <div class="container">
         <h4>action</h4>
-        <div class="card-deck" id="carddeck">
+        <div class="card-deck" id="carddeck5">
 
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
 
-      </div>
-    </div>
-    <h5>asdfghbvcxdzsdxfcgvhdzfxcg</h5>
-    <div class="rpg">
-      <h4>rpg</h4>
-      <div class="container">
-        <div class="card-deck" id="carddeck2">
-
+        <div class="footer">
+          <div class="contaisner">
+            <div class="jumbotron">
+              <img class="img" src="icons/fb 64px.jpg" alt="">
+              <img class="img" src="icons/twitter 64px.jpg" alt="">
+              <img class="img" src="icons/youtube 64px.jpg" alt="">
+              <img class="img" src="icons/insta 64px.jpg" alt="">
+            </div>
+          </div>
         </div>
       </div>
     </div>
