add footer to all pages

--- a/page2.html
+++ b/page2.html
@@ -189,7 +189,17 @@
               </div>
             </div>
           </section>
-
+          <div class="footer">
+            <div class="container">
+              <div class="jumbotron">
+                <h3>contact us:</h3>
+                <img class="img" src="icons/fb 64px.jpg" alt="">
+                <img class="img" src="icons/twitter 64px.jpg" alt="">
+                <img class="img" src="icons/youtube 64px.jpg" alt="">
+                <img class="img" src="icons/insta 64px.jpg" alt="">
+              </div>
+            </div>
+          </div>
 
 
 
@@ -204,6 +214,7 @@
       </div>
 
     </div>
+
     <!--content wrapper ends-->
 
 
