--- a/page3.html
+++ b/page3.html
@@ -76,6 +76,7 @@
         <div class="footer">
           <div class="contaisner">
             <div class="jumbotron">
+              <h3>contact us:</h3>
               <img class="img" src="icons/fb 64px.jpg" alt="">
               <img class="img" src="icons/twitter 64px.jpg" alt="">
               <img class="img" src="icons/youtube 64px.jpg" alt="">
