--- a/index.html
+++ b/index.html
@@ -199,7 +199,17 @@
 
       </div>
       <!--top seller ends-->
-
+      <div class="footer">
+        <div class="container">
+          <div class="jumbotron">
+            <h3>contact us:</h3>
+            <img class="img" src="icons/fb 64px.jpg" alt="">
+            <img class="img" src="icons/twitter 64px.jpg" alt="">
+            <img class="img" src="icons/youtube 64px.jpg" alt="">
+            <img class="img" src="icons/insta 64px.jpg" alt="">
+          </div>
+        </div>
+      </div>
     </div>
     <!--content wrapper ends-->
 
