fix the main carousel layout so that it looks good

--- a/index.html
+++ b/index.html
@@ -65,12 +65,7 @@
     <div id="content">
       <div class="container landing2">
 
-        <!--blaster starts here-->
-        <div class="blasterIntro">
 
-          <iframe width="1080" height="480" src="https://www.youtube.com/embed/kf2qDAEZc2w?autoplay=1&rel=0" frameborder="0" allowfullscreen></iframe>
-        </div>
-        <!--blaster ends here-->
 
 
         <!--carousel starts here-->
@@ -87,45 +82,45 @@
 
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="img/gta4.jpg" alt="First slide">
+              <img class="d-block img-fluid" src="img/gta1.jpg" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Gta 4</h3>
-                <p>Brucie is here baby</p>
+                <h3></h3>
+                <p>Grand Theft Auto</p>
               </div>
             </div>
 
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="img/spilnter.jpg" alt="Second slide">
+              <img class="d-block img-fluid" src="img/cod1.jpg" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Gta 4</h3>
-                <p>Brucie is here baby</p>
+                <h3></h3>
+                <p>Call Of Duty</p>
               </div>
             </div>
 
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="img/gears.jpg" alt="Third slide">
+              <img class="d-block img-fluid" src="img/crew1.jpg" alt="Third slide">
 
               <div class="carousel-caption d-none d-md-block">
-                <h3>Gears</h3>
-                <p>Brucie is here baby</p>
+                <h3></h3>
+                <p>Crew</p>
               </div>
             </div>
 
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="img/starwars.jpg" alt="Fourth slide">
+              <img class="d-block img-fluid" src="img/bat1.jpg" alt="Fourth slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Star wars</h3>
-                <p>Brucie is here baby</p>
+                <h3></h3>
+                <p>BattleField</p>
               </div>
             </div>
 
 
 
             <div class="carousel-item">
-              <img class="d-block img-fluid" src="img/uncharted.jpg" alt="Fifth slide">
+              <img class="d-block img-fluid" src="img/dark1.jpg" alt="Fifth slide">
               <div class="carousel-caption d-none d-md-block">
-                <h3>Uncharted</h3>
-                <p>Brucie is here baby</p>
+                <h3></h3>
+                <p>Darkwood</p>
               </div>
             </div>
 
@@ -143,9 +138,19 @@
         <!--carousel ends here-->
 
 
+
+
         <!-- <div class="fgffg">
         </div> -->
       </div>
+      <!--blaster starts here-->
+      <div class="blasterIntro">
+        <h3>HOT THIS WEEK</h3>
+
+        <iframe width="50%" height="340" src="https://www.youtube.com/embed/kf2qDAEZc2w?autoplay=1&rel=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+      <!--blaster ends here-->
+
       <div class="screenshot">
         <div class="container">
           <h3><a id="finya" href="page3.html">ALL GAMES</a></h3>
