add google fonts

--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/page2.css">
@@ -128,8 +129,8 @@
 
           <section id="description">
             <h4>Description</h4>
-            <div class="row page2">
-              <div class="col-md-4">
+            <div class="ro">
+              <div class="co">
                 <h5>Key Features:</h5>
 
                 <p>Play it early. Get up to 3 days of early access with the Deluxe Edition.</p>
@@ -143,19 +144,7 @@
                 </p>
 
               </div>
-              <div class="col-md-8">
-                <p>
 
-                  Exclusive themed looks. Make sure your crew really stand out against the chaos of the battleground with exclusive looks.
-                </p>
-
-                <p>Epic tier Star Cards. Get instant access to epic tier Star Cards, upgrading and strengthening your characters’ abilities, and granting you additional power to change the course of the game, use your epic Star Cards to increase your radius
-                  of vision, revealing enemies’ and friends in hidden positions through out the game, then impair their movement for a greater duration using Deep Mind.Use your Solid Freeze epic Star Card to increase the time you freeze your opponents
-                  in fear, then pull them towards you over even greater distances with Power Reach.</p>
-
-                <p>Ship epic ability modifiers. Get an edge over the Resistance with an upgrade to a new First Order ship card.
-                </p>
-              </div>
             </div>
           </section>
 
@@ -189,6 +178,14 @@
               </div>
             </div>
           </section>
+          <div class="others">
+            <div class="container">
+              <h3>You May Also Like</h3>
+              <div class="card-deck" id="carddeck">
+
+              </div>
+            </div>
+          </div>
           <div class="footer">
             <div class="container">
               <div class="jumbotron">
