fix the header for the third page

--- a/page3.html
+++ b/page3.html
@@ -24,9 +24,9 @@
         <button class="dropbtn">Browse Games</button>
         <div class="dropdown-content">
           <ul>
-            <li><a href="#">All Games</a></li>
-            <li><a href="#">Free Games</a></li>
-            <li> <a href="#">More</a></li>
+            <li><a href="page3.html">All Games</a></li>
+            <li><a href="page3.html">Free Games</a></li>
+            <li> <a href="page3.html">More</a></li>
           </ul>
         </div>
       </div>
@@ -64,13 +64,10 @@
 
     <!--content wrapper begins-->
     <div class="action">
-      <h2>page 3</h2>
       <div class="container">
-        <h4>action</h4>
+        <h4 id="action">All Games</h4>
         <div class="card-deck" id="carddeck5">
 
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
 
 
