adding changes to make the sidebar fixed

--- a/page3.html
+++ b/page3.html
@@ -13,32 +13,41 @@
 <body>
   <div class="wrapper">
     <nav id="sidebar">
-      <div class="sidebar-header">
-        <h1><strong><a href="index.html">KaliSoft</a></strong></h1>
-      </div>
-      <form>
-        <input type="text" name="search" value="" placeholder="Search Games">
-      </form>
-      <div class="dropdown">
-        <button class="dropbtn">Browse Games</button>
-        <div class="dropdown-content">
-          <ul>
-            <li><a href="#">All Games</a></li>
-            <li><a href="#">Free Games</a></li>
-            <li> <a href="#">More</a></li>
-          </ul>
+      <aside>
+        <div class="sidebar-header">
+          <h1><strong><a href="index.html">KaliSoft</a></strong></h1>
         </div>
-      </div>
-      <div class="btn-group">
-        <button type="submit" name="sign">Sign In</button>
-        <button type="submit" name="reg">Register</button>
-      </div>
-      <div class="back">
+        <form>
+          <input type="text" name="search" value="" placeholder="Search Games">
+        </form>
+        <div class="dropdown">
+          <button class="dropbtn">Browse Games</button>
+          <div class="dropdown-content">
+            <ul>
+              <li><a href="#">All Games</a></li>
+              <li><a href="#">Free Games</a></li>
+              <li> <a href="#">More</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="downwardbtn">
+          <p>
+            <button type="submit" name="button"><a href="download.html">DOWNLOAD</a></button>
+          </p>
+          <p>
+            <button type="submit" name="button"><a href="">REGISTER</a></button>
+          </p>
+        </div>
+        <!--<div class="btn-group">
+          <button type="submit" name="sign">Sign In</button>
+          <button type="submit" name="reg">Register</button>
+        </div>-->
+        <div class="back">
 
 
-      </div>
+        </div>
     </nav>
-
+    </aside>
     <!--  <nav id="sidebar">
       <div class="sidebar-header">
         <h1><strong>KaliSoft</strong></h1>
