Add styling to the pages

--- a/page3.html
+++ b/page3.html
@@ -63,10 +63,18 @@
 
 
     <!--content wrapper begins-->
+
     <div class="action">
       <div class="container">
+        <div id="landing3">
+
+        </div>
         <h4 id="action">All Games</h4>
         <div class="card-deck" id="carddeck5">
+
+        </div>
+
+        <div id="landing4">
 
         </div>
 
