--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
             <li data-target="#kalicarousel" data-slide-to="5"></li>
             <li data-target="#kalicarousel" data-slide-to="6"></li>
             <li data-target="#kalicarousel" data-slide-to="7"></li>
+            <li data-target="#kalicarousel" data-slide-to="8"></li>
+            <li data-target="#kalicarousel" data-slide-to="9"></li>
           </ol>
 
           <div class="carousel-inner" role="listbox">
@@ -132,7 +134,7 @@
               <img class="d-block img-fluid" src="img/crew1.jpg" alt="Third slide">
 
               <div class="carousel-caption d-none d-md-block">
-                <h3></h3>
+                <!-- <h3></h3> -->
                 <p>Crew</p>
               </div>
             </div>
@@ -154,6 +156,24 @@
                 <p>Darkwood</p>
               </div>
             </div>
+
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="img/titanfall-2-standard-edition_pdp_3840x2160_en_WW.jpg" alt="Fifth slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3></h3>
+                <p>Titanfall-2</p>
+              </div>
+            </div>
+
+            <div class="carousel-item">
+              <img class="d-block img-fluid" src="img/tek1.png" alt="Fifth slide">
+              <div class="carousel-caption d-none d-md-block">
+                <h3></h3>
+                <p>Tekken</p>
+              </div>
+            </div>
+
+
 
           </div>
           <a class="carousel-control-prev" href="#kalicarousel" role="button" data-slide="prev">
@@ -184,8 +204,8 @@
 
       <div class="screenshot">
         <div class="container">
-          <h3>Trending Games<a id="finya" href="page3.html">...View all</a></h3>
-          <h3></h3>
+          <h3>TRENDING GAMES<a id="finya" href="page3.html">...View all</a></h3>
+
           <div class="card-deck" id="carddeck">
 
           </div>
@@ -210,7 +230,7 @@
       <!--indie section starts-->
       <div class="indie-games">
         <div class="container">
-          <h3>Indie Games</h3>
+          <h3>FEATURED INDIE GAMES</h3>
           <div class="card-deck" id="carddeck-indie">
 
           </div>
@@ -226,6 +246,10 @@
 
           </div>
         </div>
+
+      </div>
+
+      <div id="landing3">
 
       </div>
       <!--top seller ends-->
