--- a/page2.html
+++ b/page2.html
@@ -26,7 +26,7 @@
         <button class="dropbtn">Browse Games</button>
         <div class="dropdown-content">
           <ul>
-            <li><a href="#page3.html">All Games</a></li>
+            <li><a href="page3.html">All Games</a></li>
             <li><a href="#">Free Games</a></li>
             <li> <a href="#">More</a></li>
           </ul>
@@ -68,7 +68,7 @@
     <div class="">
 
       <section id="intro">
-        <h2>page 2</h2>
+
         <div class="container">
           <h4 id="gamesHeaders"></h4>
           <div class="row">
