fix the all games link on page2.html

--- a/page2.html
+++ b/page2.html
@@ -27,7 +27,7 @@
           <button class="dropbtn">Browse Games</button>
           <div class="dropdown-content">
             <ul>
-              <li><a href="#">All Games</a></li>
+              <li><a href="page3.html">All Games</a></li>
               <li><a href="#">Free Games</a></li>
               <li> <a href="#">More</a></li>
             </ul>
