Add anchor tag to download page to take one back home

--- a/download.html
+++ b/download.html
@@ -10,7 +10,7 @@
 
 <body id="dev">
   <div class="container">
-    <h3>Kali-<strong>Soft</strong></h3>
+    <h3><strong> <a href="index.html">KaliSoft</a></strong></h3>
 
     <div>
 
